# SLM-VisualModel

./: .gitignore  README.md  run.ps1
backend/: model.py  requirements.txt  sampling.py  server.py  tokenizer.py
gui/: CMakeLists.txt  main.cpp  websocketclient.cpp  websocketclient.h
gui/qml/: AttentionView.qml  BackendMonitor.qml  HudButton.qml  HudCheckBox.qml  HudComboBox.qml  HudPanel.qml  MLPView.qml  Main.qml  TokenStream.qml  TopKWheel.qml
launcher/: CMakeLists.txt  main.cpp
